--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,14 @@ version: '3.8'
 
 services:
 
-  app:
+  nodeapp:
     build:
-      context: node
-    container_name: nodeserver
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node index.js docker-entrypoint.sh
+      context: node      
+    container_name: nodeapp
+    entrypoint: 
+      dockerize -wait tcp://db:3306 -timeout 20s
+      node index.js
+      docker-entrypoint.sh           
     networks:
       - desafionet
     volumes:
@@ -41,7 +44,7 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - app
+      - nodeapp
 
 networks:
   desafionet:
